--- a/src/App.css
+++ b/src/App.css
@@ -1,32 +1,127 @@
-.App {
-  text-align: center;
+:root {
+ --mainColor: rgba(15, 39, 35, 0.9);
+ --fontColor: rgb(240, 240, 240);
+}
+* {
+ margin: 0;
+ padding: 0;
+ box-sizing: border-box;
+ font-family: 'Roboto', sans-serif;
+}
+header {
+ position: fixed;
+ width: 100%;
+ height: 80px;
+ top: 0;
+ z-index: 1000;
+ background-color: var(--mainColor);
+ color: var(--fontColor);
+}
+header h1 {
+ text-align: center;
+ line-height: 80px;
+}
+.container {
+ position: relative;
+ margin: 0 auto 90px;
+ top: 150px;
+ padding: 5px;
+ width: 90%;
+ border: 1px solid black;
+ box-shadow: 0px 0px 10px 2px rgba(0, 0, 0, 0.6);
+}
+ .addTodo {
+ margin: 20px 0px 20px 10px;
+ border: 1px solid var(--mainColor);
+ height: 30px;
+ width: 80%;
+}
+.btnAdd {
+ margin: 0 1%;
+ width: 15%;
+ height: 30px;
+ background-color: var(--mainColor);
+ color: var(--fontColor);
+ font-weight: 600;
+ border-radius: 6px;
+ outline: none;
+ cursor: pointer;
+}
+.btnAdd:hover {
+ font-weight: 800;
+}
+.todo {
+ position: relative;
+ font-size: 1.5em;
+ padding: 10px 10px 10px;
+ background-color: rgba(54, 54, 54, 0.1);
+ box-shadow: 0px 0.5px 0.2px 0.5px rgba(0, 0, 0, 0.6);
+}
+.todo:hover {
+ font-size: 1.6em;
+ background-color: rgba(54, 54, 54, 0.2);
+}
+.czekbox {
+ transform: scale(2);
+ margin: 10px 20px 0 10px;
+ cursor: pointer;
+}
+.czekbox:hover {
+ transform: scale(2.5);
+}
+.btnDel {
+ position: absolute;
+ background-color: rgb(245, 41, 41);
+ width: 70px;
+ height: 2em;
+ right: 10px;
+ font-weight: 700;
+ border-radius: 6px;
+ outline: none;
+ cursor: pointer;
+}
+.btnDel:hover {
+ background-color: rgb(247, 13, 13);
+ font-weight: 900;
+}
+footer {
+ width: 100%;
+ position: fixed;
+ bottom: 0;
+ padding: 10px;
+ background-color: var(--mainColor);
+ color: var(--fontColor);
+}
+footer h3 {
+ text-align: center;
+ line-height: 15px;
+}
+footer h5 {
+ text-align: center;
+ line-height: 15px;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-}
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+@media (min-width: 900px) {
+ header {
+  height: 100px;
+ }
+ header h1 {
+  line-height: 100px;
+  font-size: 3em;
+ }
+ .container {
+  width: 60%;
+ }
+ footer {
+  padding: 20px;
+ }
+ footer h3 {
+  line-height: 20px;
+  font-size: 1.5em;
+ }
+ footer h5 {
+  line-height: 20px;
+  font-size: 1em;
+ }
 }
